--- a/Flexbox Startup Site/style.css
+++ b/Flexbox Startup Site/style.css
@@ -14,24 +14,24 @@ body, html {
   height: 100%;
 }
 
-header { 
-  color: #e4e7e7;
-  display: flex;
-  flex-flow: column wrap;
-  /* justify-content: space-between; */
-  /* border: 2px solid red; */
-  padding-bottom: 100px;
-  align-content: flex-end;
-}
-
-#showcase {
-  align-self: center;
-}
-
 nav {
+  width: 100%;
+  position: absolute; 
   display: flex;
   justify-content: space-between;
   padding: 35px 85px 0 100px;  
+  color: #e4e7e7;
+  flex-flow: row nowrap;
+}
+
+#showcase {
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+.call-to-action {
+  align-self: center;
 }
 
 .logo:hover,
@@ -57,12 +57,17 @@ nav {
 }
 
 .bg {
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
+  width: 100%;
   background: linear-gradient(
-    rgba(54, 59, 65, 0.7), 
-    rgba(54, 59, 65, 0.7)), 
+    rgba(63, 74, 87, 0.7), 
+    rgba(63, 74, 87, 0.7)), 
     url("media/hero.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  z-index: -1;
 }
