--- a/Flexbox Startup Site/style.css
+++ b/Flexbox Startup Site/style.css
@@ -30,6 +30,16 @@ nav {
   min-height: 100vh;
 }
 
+#hero h1 {
+  font: bold 60px 'Open Sans', sans-serif;
+  padding-bottom: 15px;
+}
+
+#hero h2 {
+  font: normal 28px 'Open Sans', sans-serif;
+  padding-bottom: 40px;
+}
+
 .logo:hover,
 .nav-item:hover {
   color: #F2F3F3;
@@ -82,7 +92,7 @@ section {
   font-weight: 800;
   color: #fff;
   text-align: center;
-  padding: 18px 40px;
+  padding: 16px 42px;
   text-transform: uppercase;
   font-size: 16px;
   text-decoration: none;
