--- a/Flexbox Startup Site/style.css
+++ b/Flexbox Startup Site/style.css
@@ -53,7 +53,6 @@ section p {
 }
 
 hr {
-  margin-bottom: 50px;
   width: 150px;
   border: 1px solid #2196F3;
   background-color: #2196F3;
@@ -103,6 +102,10 @@ hr {
 .title {
   font: bold 32px 'Open Sans', sans-serif;
   color: #414A4F;
+}
+
+.subtitle {
+  font: bold 20px sans-serif;
 }
 
 #our-work p {
@@ -160,4 +163,40 @@ ul.grid li {
 
 .small {
   flex: 40%;
+}
+
+#features {
+  background-color: #F7F7F7;
+}
+
+#features h2,
+#features p {
+  margin-bottom: 35px;
+}
+
+#features ul {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#features ul li {
+  /* border: 2px solid blue; */
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  min-width: 250px;
+  margin: 0 20px;
+  height: 250px;
+}
+
+#features ul li i {
+  font-size: 50px;
+  color: #2196F3;
+  margin-bottom: 20px;
+}
+
+#features ul li h4 {
+  margin-bottom: 20px;
 }
