--- a/Flexbox Startup Site/style.css
+++ b/Flexbox Startup Site/style.css
@@ -23,6 +23,10 @@ a:hover {
   opacity: 1;
 }
 
+/* header {
+  width: 100%;
+} */
+
 ul, nav {
   list-style-type: none;
 }
@@ -84,14 +88,17 @@ hr {
 }
 
 #hero {
+  width: 100%;
   color: #fff;
   justify-content: center;
   min-height: 100vh;
+  position: relative;
 }
 
 #hero h1 {
   font: bold 60px 'Open Sans', sans-serif;
   padding-bottom: 15px;
+  text-align: center;
 }
 
 #hero h2 {
@@ -175,18 +182,18 @@ ul.grid li {
 }
 
 #features ul {
+  /* width: 100%; */
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 #features ul li {
   display: flex;
   flex-flow: column;
   align-items: center;
-  min-width: 250px;
-  margin: 0 20px;
+  flex-basis: 33%;
   height: 250px;
 }
 
@@ -266,4 +273,22 @@ footer ul.social-media li {
 
 footer ul.social-media li a i {
   color: #ffffff;
+}
+
+@media only screen and (max-width: 1000px) {
+  #features ul li {
+    flex-basis: 70%;
+  }
+
+  section {
+    padding: 50px;
+  }
+
+  nav {
+    padding: 20px 40px 0 50px;
+  }
+
+  ul.grid {
+    flex-direction: column;
+  }
 }
